fixed test not passing